Improved session manager, added http based stop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "argon"
 authors = ["Dervex"]
 description = "Full featured tool for Roblox development"
-repository = "https://github.com/DervexHero/Argon"
+repository = "https://github.com/argon-rbx/argon"
 documentation = "https://argon.wiki/docs"
 homepage = "https://argon.wiki"
 license = "Apache-2.0"
@@ -26,10 +26,10 @@ backtrace = "0.3.69"
 toml_edit = "0.20.5"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
-sysinfo = "0.29.10"
 globenv = "0.1.0"
 colored = "2.0.4"
 notify = "6.1.1"
 toml = "0.8.3"
 open = "5.0.0"
 log = "0.4.20"
+awc = "3.2.0"
