Moved serve to run, file templates, better result

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ backtrace = "0.3.69"
 toml_edit = "0.20.5"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
-globenv = "0.1.0"
+globenv = "0.2.0"
 colored = "2.0.4"
+anyhow = "1.0.75"
 notify = "6.1.1"
 toml = "0.8.3"
 open = "5.0.0"
