Added workspace init, project resolver, improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ backtrace = "0.3.69"
 toml_edit = "0.20.5"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
+optfield = "0.3.0"
 globenv = "0.2.0"
 colored = "2.0.4"
 anyhow = "1.0.75"
