--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ colored = "2.0.4"
 anyhow = "1.0.75"
 notify = "6.1.1"
 toml = "0.8.3"
+glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
 awc = "3.2.0"
