--- a/assets/templates/default/project.json
+++ b/assets/templates/default/project.json
@@ -1,6 +1,38 @@
 {
 	"name": "$name",
 	"tree": {
-		"$path": "src"
+		"$className": "DataModel",
+		"Workspace": {
+			"$path": "src/Workspace"
+		},
+		"ReplicatedFirst": {
+			"$path": "src/ReplicatedFirst"
+		},
+		"ReplicatedStorage": {
+			"$path": "src/ReplicatedStorage",
+			"Packages": {
+				"$path": "Packages"
+			}
+		},
+		"ServerScriptService": {
+			"$path": "src/ServerScriptService"
+		},
+		"ServerStorage": {
+			"$path": "src/ServerStorage"
+		},
+		"StarterGui": {
+			"$path": "src/StarterGui"
+		},
+		"StarterPack": {
+			"$path": "src/StarterPack"
+		},
+		"StarterPlayer": {
+			"StarterCharacterScripts": {
+				"$path": "src/StarterPlayer/StarterCharacterScripts"
+			},
+			"StarterPlayerScripts": {
+				"$path": "src/StarterPlayer/StarterPlayerScripts"
+			}
+		}
 	}
 }
