--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ toml_edit = "0.21.0"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
 optfield = "0.3.0"
-globenv = "0.2.0"
+globenv = "0.2.1"
 colored = "2.0.4"
 anyhow = "1.0.75"
 notify = "6.1.1"
@@ -36,3 +36,4 @@ glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
 awc = "3.2.0"
+notify-debouncer-full = "0.3.1"
