--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ path = "src/lib.rs"
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
-notify = { version = "6.1.1", features = ["macos_kqueue"] }
 notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
 panic-message = "0.3.0"
@@ -32,8 +31,12 @@ optfield = "0.3.0"
 globenv = "0.2.1"
 colored = "2.0.4"
 anyhow = "1.0.75"
+notify = "6.1.1"
 toml = "0.8.3"
 glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
 awc = "3.2.0"
+
+[patch.crates-io]
+notify-debouncer-full = { git = "https://github.com/argon-rbx/notify-debouncer-full.git" }
