--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1.32.0", features = ["full"] }
 notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
 panic-message = "0.3.0"
+self-replace = "1.3.7"
 serde_json = "1.0.107"
 env_logger = "0.10.0"
 directories = "5.0.1"
