--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
 notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
+crossbeam-channel = "0.5.8"
 panic-message = "0.3.0"
 self-replace = "1.3.7"
 serde_json = "1.0.107"
