Roblox path processor, many other improvements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ dialoguer = "0.11.0"
 actix-web = "4.4.0"
 optfield = "0.3.0"
 globenv = "0.2.1"
+pathsub = "0.1.1"
 colored = "2.0.4"
 anyhow = "1.0.75"
 notify = "6.1.1"
