--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ name = "argon"
 path = "src/lib.rs"
 
 [dependencies]
+rbx_binary = "0.7.3"
+rbx_dom_weak = "2.6.0"
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
@@ -21,7 +23,6 @@ notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
 crossbeam-channel = "0.5.8"
 panic-message = "0.3.0"
-rbx_dom_weak = "2.6.0"
 self-replace = "1.3.7"
 serde_json = "1.0.107"
 env_logger = "0.10.0"
@@ -34,6 +35,7 @@ optfield = "0.3.0"
 globenv = "0.2.1"
 pathsub = "0.1.1"
 colored = "2.0.4"
+walkdir = "2.4.0"
 anyhow = "1.0.75"
 notify = "6.1.1"
 toml = "0.8.3"
@@ -44,4 +46,3 @@ awc = "3.2.0"
 
 [patch.crates-io]
 notify-debouncer-full = { git = "https://github.com/argon-rbx/notify-debouncer-full.git" }
-rbx_dom_weak = { git = "https://github.com/DervexHero/rbx-dom.git" }
