Fully working place and model dom builder, path_map, general fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "argon"
 path = "src/lib.rs"
 
 [dependencies]
+rbx_xml = "0.13.2"
 rbx_binary = "0.7.3"
 rbx_dom_weak = "2.6.0"
 rbx_reflection = "4.4.0"
@@ -33,6 +34,7 @@ backtrace = "0.3.69"
 toml_edit = "0.21.0"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
+multimap = "0.9.1"
 optfield = "0.3.0"
 globenv = "0.2.1"
 pathsub = "0.1.1"
