--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { version = "1.32.0", features = ["full"] }
 notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
 crossbeam-channel = "0.5.8"
+roblox_install = "1.0.0"
 panic-message = "0.3.0"
 self-replace = "1.3.7"
 serde_json = "1.0.107"
