Add all file actions support, fix JSON module parsing, improve building

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ directories = "5.0.1"
 backtrace = "0.3.69"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
+json2lua = "0.1.2"
 multimap = "0.9.1"
 optfield = "0.3.0"
 globenv = "0.2.1"
