--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
 awc = "3.2.0"
+csv = "1.3.0"
 
 [patch.crates-io]
 notify-debouncer-full = { git = "https://github.com/argon-rbx/notify-debouncer-full.git" }
