Improve roblox-ts support, update templates, ton of fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,9 @@ globenv = "0.2.1"
 pathsub = "0.1.1"
 colored = "2.0.4"
 anyhow = "1.0.75"
+chrono = "0.4.31"
 notify = "6.1.1"
+whoami = "1.4.1"
 toml = "0.8.3"
 glob = "0.3.1"
 open = "5.0.0"
