--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ anyhow = "1.0.75"
 chrono = "0.4.31"
 notify = "6.1.1"
 whoami = "1.4.1"
+ctrlc = "3.4.2"
 toml = "0.8.3"
 glob = "0.3.1"
 open = "5.0.0"
