--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ serde_json = "1.0.107"
 env_logger = "0.10.0"
 directories = "5.0.1"
 backtrace = "0.3.69"
+documented = "0.2.0"
 dialoguer = "0.11.0"
 actix-web = "4.4.0"
 json2lua = "0.1.2"
