--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rbx_reflection_database = "0.2.9"
 
 config-derive = { version = "*", path = "crates/config-derive" }
 
+reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
@@ -34,6 +35,7 @@ panic-message = "0.3.0"
 self-replace = "1.3.7"
 serde_json = "1.0.107"
 env_logger = "0.10.0"
+include_dir = "0.7.3"
 directories = "5.0.1"
 backtrace = "0.3.69"
 documented = "0.2.0"
@@ -57,7 +59,6 @@ toml = "0.8.3"
 glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
-awc = "3.2.0"
 csv = "1.3.0"
 
 [patch.crates-io]
