--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rbx_reflection = "4.4.0"
 rbx_reflection_database = "0.2.9"
 
 config-derive = { version = "*", path = "crates/config-derive" }
+profiling = { version = "*", path = "crates/profiling/profiling" }
 
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
@@ -32,6 +33,7 @@ clap-verbosity-flag = "2.1.0"
 crossbeam-channel = "0.5.8"
 roblox_install = "1.0.0"
 panic-message = "0.3.0"
+puffin_http = "0.16.0"
 self-replace = "1.3.7"
 serde_json = "1.0.107"
 env_logger = "0.10.0"
@@ -49,6 +51,7 @@ json2lua = "0.1.2"
 globenv = "0.2.1"
 pathsub = "0.1.1"
 
+puffin = "0.19.0"
 walkdir = "2.4.0"
 colored = "2.0.4"
 anyhow = "1.0.75"
