--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,8 +47,8 @@ multimap = "0.9.1"
 optfield = "0.3.0"
 
 json2lua = "0.1.2"
+toml2lua = "0.1.0"
 globenv = "0.2.1"
-pathsub = "0.1.1"
 
 puffin = "0.19.0"
 walkdir = "2.4.0"
