--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,11 +48,9 @@ optfield = "0.3.0"
 
 json2lua = "0.1.2"
 toml2lua = "0.1.0"
-pathsub = "0.1.1"
 globenv = "0.2.1"
 
 puffin = "0.19.0"
-walkdir = "2.4.0"
 colored = "2.0.4"
 anyhow = "1.0.75"
 chrono = "0.4.31"
@@ -64,6 +62,7 @@ glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
 csv = "1.3.0"
+derive-from-one = "0.1.0"
 
 [patch.crates-io]
 notify-debouncer-full = { path = "crates/notify-debouncer-full" }
