Add sourcemap command, improve meta, ton of other fixes and upgrades

--- a/assets/templates/place/wally.toml
+++ b/assets/templates/place/wally.toml
@@ -3,5 +3,6 @@ name = "$author/$name"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
+private = true
 
 [dependencies]
