Fix child project integration, add top level project hot reloading

--- a/assets/templates/place/project.json
+++ b/assets/templates/place/project.json
@@ -3,10 +3,7 @@
   "tree": {
     "$className": "DataModel",
     "ReplicatedStorage": {
-      "$path": "src/Shared",
-      "Packages": {
-        "$path": "Packages"
-      }
+      "$path": "src/Shared"
     },
     "ServerScriptService": {
       "$path": "src/Server"
