--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,7 @@ profiling = { version = "*", path = "crates/profiling/profiling" }
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
-reqwest = { version = "0.11.23", features = [
-	"blocking",
-	"json",
-	"native-tls-vendored",
-] }
-
+reqwest = { version = "0.11.23", features = ["blocking", "json", "rustls-tls"] }
 
 notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
