Fixes and improvements on Windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ directories = "5.0.1"
 backtrace = "0.3.69"
 documented = "0.2.0"
 dialoguer = "0.11.0"
+path-clean = "1.0.1"
 actix-web = "4.4.0"
 multimap = "0.9.1"
 optfield = "0.3.0"
