--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,43 @@ on:
     tags: ["*"]
 
 jobs:
+  bump:
+    name: Bump Version
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Update Changelog
+        uses: thomaseizinger/keep-a-changelog-new-release@v2
+        with:
+          tag: ${{ github.ref_name }}
+
+      - name: Bump Cargo version
+        uses: DervexDev/file-version-bumper@v1
+        with:
+          path: ./Cargo.toml
+
+      - name: Update Cargo lock
+        run: cargo update --workspace
+
+      - name: Commit and Push
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: Bump Version to ${{ github.ref_name }}
+          default_author: github_actions
+
+      - name: Update tag
+        run: |
+          git tag -fa ${{ github.ref_name }} -m "Release ${{ github.ref_name }}"
+          git push -f --tags
+
   draft-release:
     name: Draft Release
     runs-on: ubuntu-latest
+    needs: bump
 
     outputs:
       upload_url: ${{ steps.create-release.outputs.upload_url }}
@@ -15,6 +49,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Read Changelog
         id: read-changes
@@ -63,6 +99,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Setup Rust
         uses: hecrj/setup-rust-action@v2
@@ -100,39 +138,10 @@ jobs:
           asset_name: argon-${{ github.ref_name }}-${{ matrix.label }}.zip
           asset_path: release.zip
 
-  bump:
-    name: Bump Version
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: main
-
-      - name: Update Changelog
-        uses: thomaseizinger/keep-a-changelog-new-release@v2
-        with:
-          tag: ${{ github.ref_name }}
-
-      - name: Bump Cargo version
-        uses: DervexDev/file-version-bumper@v1
-        with:
-          path: ./Cargo.toml
-
-      - name: Update Cargo lock
-        run: cargo update --workspace
-
-      - name: Commit and Push
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: Bump Version to ${{ github.ref_name }}
-          default_author: github_actions
-
   publish-release:
     name: Publish Release
     runs-on: ubuntu-latest
-    needs: [bump, draft-release]
+    needs: [build, draft-release]
 
     steps:
       - uses: eregon/publish-release@v1
