--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
 reqwest = { version = "0.11.23", features = ["blocking", "json", "rustls-tls"] }
+self_update = { version = "0.39.0", features = [
+	"compression-zip-deflate",
+	"rustls",
+] }
 
 notify-debouncer-full = "0.3.1"
 clap-verbosity-flag = "2.1.0"
@@ -35,7 +39,6 @@ derive-from-one = "0.1.0"
 roblox_install = "1.0.0"
 panic-message = "0.3.0"
 puffin_http = "0.16.0"
-self-replace = "1.3.7"
 serde_json = "1.0.107"
 env_logger = "0.10.0"
 include_dir = "0.7.3"
@@ -67,3 +70,4 @@ csv = "1.3.0"
 
 [patch.crates-io]
 notify-debouncer-full = { path = "crates/notify-debouncer-full" }
+self_update = { path = "crates/self_update" }
