--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
           tag: ${{ github.ref_name }}
 
       - name: Bump Cargo version
+        id: version-bump
         uses: DervexDev/file-version-bumper@v1
         with:
           path: ./Cargo.toml
@@ -29,11 +30,13 @@ jobs:
 
       - name: Commit and Push
         uses: EndBug/add-and-commit@v9
+        if: ${{ github.ref_name != steps.version-bump.outputs.old_version }}
         with:
-          message: Bump Version to ${{ github.ref_name }}
+          message: Bump version to ${{ github.ref_name }}
           default_author: github_actions
 
       - name: Update tag
+        if: ${{ github.ref_name != steps.version-bump.outputs.old_version }}
         run: |
           git tag -fa ${{ github.ref_name }} -m "Release ${{ github.ref_name }}"
           git push -f --tags
