--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,14 @@ homepage = "https://argon.wiki"
 license = "Apache-2.0"
 version = "2.0.0-pre5"
 edition = "2021"
+build = "build.rs"
 
 [lib]
 name = "argon"
 path = "src/lib.rs"
+
+[features]
+plugin = []
 
 [dependencies]
 rbx_xml = "0.13.2"
@@ -67,6 +71,14 @@ glob = "0.3.1"
 open = "5.0.0"
 log = "0.4.20"
 csv = "1.3.0"
+
+[build-dependencies]
+anyhow = "1.0.79"
+self_update = { version = "0.39.0", features = [
+	"compression-zip-deflate",
+	"rustls",
+] }
+
 
 [patch.crates-io]
 notify-debouncer-full = { path = "crates/notify-debouncer-full" }
