--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ serde_json = "1.0.107"
 env_logger = "0.10.0"
 include_dir = "0.7.3"
 directories = "5.0.1"
+lazy_static = "1.4.0"
 backtrace = "0.3.69"
 documented = "0.2.0"
 dialoguer = "0.11.0"
