--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,6 @@ panic-message = "0.3.0"
 actix-msgpack = "0.1.1"
 puffin_http = "0.16.0"
 serde_json = "1.0.107"
-keybd_event = "0.1.2"
 env_logger = "0.10.0"
 include_dir = "0.7.3"
 directories = "5.0.1"
@@ -76,7 +75,10 @@ open = "5.0.0"
 log = "0.4.20"
 csv = "1.3.0"
 
-[target.'cfg(windows)'.dependencies]
+[target.'cfg(not(target_os = "linux"))'.dependencies]
+keybd_event = "0.1.2"
+
+[target.'cfg(target_os = "windows")'.dependencies]
 winsafe = { version = "0.0.20", features = ["user"] }
 
 [build-dependencies]
