--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ path = "src/lib.rs"
 plugin = []
 
 [dependencies]
-rbx_xml = "0.13.2"
-rbx_binary = "0.7.3"
-rbx_dom_weak = "2.6.0"
-rbx_reflection = "4.4.0"
-rbx_reflection_database = "0.2.9"
+rbx_xml = "0.13.3"
+rbx_binary = "0.7.4"
+rbx_dom_weak = "2.7.0"
+rbx_reflection = "4.5.0"
+rbx_reflection_database = "0.2.10"
 
 config-derive = { version = "*", path = "crates/config-derive" }
 profiling = { version = "*", path = "crates/profiling/profiling" }
@@ -68,6 +68,7 @@ anyhow = "1.0.79"
 chrono = "0.4.31"
 notify = "6.1.1"
 whoami = "1.4.1"
+trash = "4.1.0"
 ctrlc = "3.4.2"
 toml = "0.8.3"
 glob = "0.3.1"
