Prepare Argon for release on crates.io, minor fixes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,7 @@ jobs:
           targets: ${{ matrix.target }}
 
       - name: Build
-        run: cargo build --all-features --release --verbose --target ${{ matrix.target }}
+        run: cargo build --release --verbose --target ${{ matrix.target }}
         env:
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
 
