--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.32.0", features = ["full"] }
 reqwest = { version = "0.11.23", features = ["blocking", "rustls-tls"] }
+rmpv = {version = "1.3.0", features = ["with-serde"] }
 self_update = { version = "0.39.0", features = [
 	"compression-zip-deflate",
 	"rustls",
