--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,7 +113,8 @@ jobs:
       - name: Build
         run: cargo build --all-features --release --verbose --target ${{ matrix.target }}
         env:
-          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          ARGON_TOKEN: ${{ secrets.ARGON_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Archive
         shell: bash
