--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,11 @@ rbx_reflection_database = "0.2.10"
 config-derive = { version = "*", path = "crates/config-derive" }
 profiling = { version = "*", path = "crates/profiling/profiling" }
 
-clap = { version = "4.4.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.189", features = ["derive"] }
-tokio = { version = "1.32.0", features = ["full"] }
-reqwest = { version = "0.11.23", features = ["blocking", "rustls-tls"] }
 rmpv = {version = "1.3.0", features = ["with-serde"] }
-self_update = { version = "0.39.0", features = [
+clap = { version = "4.4.1", features = ["derive", "cargo"] }
+reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls"] }
+self_update = { version = "0.39.0", default-features = false, features = [
 	"compression-zip-deflate",
 	"rustls",
 ] }
@@ -85,15 +84,10 @@ winsafe = { version = "0.0.20", features = ["user"] }
 
 [build-dependencies]
 anyhow = "1.0.79"
-self_update = { version = "0.39.0", features = [
-	"compression-zip-deflate",
-	"rustls",
-] }
-
+self_update = { version = "0.39.0", default-features = false, features = ["rustls"]}
 
 [patch.crates-io]
 notify-debouncer-full = { path = "crates/notify-debouncer-full" }
 self_update = { path = "crates/self_update" }
-
 # Temporary until `InstanceBuilder::with_referent` is released
 rbx_dom_weak = { path = "crates/rbx_dom_weak" }
