--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["crates/json-formatter"] }
 [package]
 name = "argon"
 authors = ["Dervex"]
@@ -25,6 +26,7 @@ rbx_reflection = "4.5.0"
 rbx_reflection_database = "0.2.10"
 
 config-derive = { version = "*", path = "crates/config-derive" }
+json-formatter = { version = "*", path = "crates/json-formatter" }
 profiling = { version = "*", path = "crates/profiling/profiling" }
 
 serde = { version = "1.0.189", features = ["derive"] }
@@ -44,7 +46,7 @@ roblox_install = "1.0.0"
 panic-message = "0.3.0"
 actix-msgpack = "0.1.1"
 puffin_http = "0.16.0"
-serde_json = "1.0.107"
+serde_json = "1.0.117"
 env_logger = "0.10.0"
 include_dir = "0.7.3"
 directories = "5.0.1"
