--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
-workspace = { members = ["crates/json-formatter"] }
 [package]
-name = "argon"
+name = "argon-rbx"
 authors = ["Dervex"]
 description = "Full featured tool for Roblox development"
 repository = "https://github.com/argon-rbx/argon"
@@ -10,6 +9,10 @@ license = "Apache-2.0"
 version = "2.0.6"
 edition = "2021"
 build = "build.rs"
+
+[[bin]]
+name = "argon"
+path = "src/main.rs"
 
 [lib]
 name = "argon"
@@ -30,9 +33,12 @@ json-formatter = { version = "*", path = "crates/json-formatter" }
 profiling = { version = "*", path = "crates/profiling/profiling" }
 
 serde = { version = "1.0.189", features = ["derive"] }
-rmpv = {version = "1.3.0", features = ["with-serde"] }
+rmpv = { version = "1.3.0", features = ["with-serde"] }
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
-reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.11.23", default-features = false, features = [
+	"blocking",
+	"rustls-tls",
+] }
 self_update = { version = "0.39.0", default-features = false, features = [
 	"compression-zip-deflate",
 	"rustls",
@@ -86,7 +92,9 @@ winsafe = { version = "0.0.20", features = ["user"] }
 
 [build-dependencies]
 anyhow = "1.0.79"
-self_update = { version = "0.39.0", default-features = false, features = ["rustls"]}
+self_update = { version = "0.39.0", default-features = false, features = [
+	"rustls",
+] }
 
 [patch.crates-io]
 notify-debouncer-full = { path = "crates/notify-debouncer-full" }
