--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -7,7 +7,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  dependabot:
+  merge:
+    name: Merge
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
 
