--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ clap = { version = "4.5.6", features = ["derive", "cargo"] }
 reqwest = { version = "0.12.4", default-features = false, features = [
 	"blocking",
 	"rustls-tls",
+	"json",
 ] }
 self_update = { version = "0.39.0", default-features = false, features = [
 	"compression-zip-deflate",
