--- a/assets/templates/quick/project.json
+++ b/assets/templates/quick/project.json
@@ -9,7 +9,10 @@
       "$path": "src/ReplicatedFirst"
     },
     "ReplicatedStorage": {
-      "$path": "src/ReplicatedStorage"
+      "$path": "src/ReplicatedStorage",
+      "Packages": {
+        "$path": "Packages"
+      }
     },
     "ServerScriptService": {
       "$path": "src/ServerScriptService"
