--- a/assets/templates/plugin/project.json
+++ b/assets/templates/plugin/project.json
@@ -1,6 +1,9 @@
 {
   "name": "$name",
   "tree": {
-    "$path": "src"
+    "$path": "src",
+    "Packages": {
+      "$path": "Packages"
+    }
   }
 }
