Add wally install integration, fix `place` template

--- a/assets/templates/place/project.json
+++ b/assets/templates/place/project.json
@@ -3,13 +3,13 @@
   "tree": {
     "$className": "DataModel",
     "ReplicatedStorage": {
-      "$path": "src/Shared"
-    },
-    "ServerScriptService": {
-      "$path": "src/Server",
+      "$path": "src/Shared",
       "Packages": {
         "$path": "Packages"
       }
+    },
+    "ServerScriptService": {
+      "$path": "src/Server"
     },
     "StarterPlayer": {
       "StarterPlayerScripts": {
