--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ puffin = "0.19.0"
 colored = "2.0.4"
 anyhow = "1.0.93"
 chrono = "0.4.38"
+regex = "1.11.1"
 notify = "6.1.1"
 whoami = "1.5.2"
 trash = "5.2.0"
