--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,6 @@ puffin = "0.19.0"
 colored = "2.2.0"
 anyhow = "1.0.95"
 chrono = "0.4.39"
-regex = "1.11.1"
 notify = "6.1.1"
 whoami = "1.5.2"
 trash = "5.2.1"
@@ -87,6 +86,7 @@ glob = "0.3.2"
 open = "5.3.1"
 log = "0.4.22"
 csv = "1.3.1"
+markdown = "0.3.0"
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 keybd_event = "0.1.2"
