--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ glob = "0.3.2"
 open = "5.3.2"
 log = "0.4.25"
 csv = "1.3.1"
+dirs = "5.0.1"
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 keybd_event = "0.1.2"
