--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,19 +75,20 @@ yaml2lua = "0.1.0"
 globenv = "0.2.1"
 
 puffin = "0.19.0"
-colored = "2.2.0"
-anyhow = "1.0.95"
+colored = "2.1.0"
+anyhow = "1.0.81"
 chrono = "0.4.39"
 notify = "6.1.1"
 whoami = "1.5.2"
 trash = "5.2.1"
 ctrlc = "3.4.5"
-toml = "0.8.15"
+toml = "0.8.10"
 glob = "0.3.2"
 open = "5.3.2"
-log = "0.4.25"
+log = "0.4.21"
 csv = "1.3.1"
 dirs = "5.0.1"
+yansi = "1.0.0"
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 keybd_event = "0.1.2"
