--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,10 @@ csv = "1.3.1"
 dirs = "5.0.1"
 yansi = "1.0.0"
 
+eventsource-client = "0.12.0"
+futures = "0.3.31"
+tokio = { version = "1.44.2", features = ["full"] }
+
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 keybd_event = "0.1.2"
 
