--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ profiling = { version = "*", path = "crates/profiling/profiling" }
 uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
 serde = { version = "1.0.217", features = ["derive"] }
 rmpv = { version = "1.3.0", features = ["with-serde"] }
-clap = { version = "4.5.27", features = ["derive", "cargo"] }
+clap = { version = "4.4", features = ["derive"] }
 reqwest = { version = "0.12.12", default-features = false, features = [
 	"blocking",
 	"rustls-tls",
@@ -85,14 +85,12 @@ ctrlc = "3.4.5"
 toml = "0.8.10"
 glob = "0.3.2"
 open = "5.3.2"
-log = "0.4.21"
+log = "0.4"
 csv = "1.3.1"
 dirs = "5.0.1"
 yansi = "1.0.0"
 
-eventsource-client = "0.12.0"
-futures = "0.3.31"
-tokio = { version = "1.44.2", features = ["full"] }
+mcpr = "0.2.3"
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 keybd_event = "0.1.2"
@@ -112,3 +110,20 @@ approx = "0.5.1"
 [patch.crates-io]
 notify-debouncer-full = { path = "crates/notify-debouncer-full" }
 self_update = { path = "crates/self_update" }
+
+actix-files = "0.6"
+actix-msgpack = "0.3"
+fs-err = "2.9"
+fs_extra = "1.3"
+ignore = "0.4"
+lua-patterns = "0.1"
+luau-src = { version = "0.604", features = ["bindings"] }
+walkdir = "2.3"
+relative-path = { version = "1.8", features = ["serde"] }
+rmp-serde = "1.1"
+same-file = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sha1 = "0.10"
+
+thiserror = "1.0"
