--- a/assets/templates/place/project.json
+++ b/assets/templates/place/project.json
@@ -9,7 +9,10 @@
       }
     },
     "ServerScriptService": {
-      "$path": "src/Server"
+      "$path": "src/Server",
+      "ServerPackages": {
+        "$path": "ServerPackages"
+      }
     },
     "StarterPlayer": {
       "StarterPlayerScripts": {
