--- a/assets/templates/quick/project.json
+++ b/assets/templates/quick/project.json
@@ -15,7 +15,10 @@
       }
     },
     "ServerScriptService": {
-      "$path": "src/ServerScriptService"
+      "$path": "src/ServerScriptService",
+      "ServerPackages": {
+        "$path": "ServerPackages"
+      }
     },
     "ServerStorage": {
       "$path": "src/ServerStorage"
