--- a/assets/templates/empty/project.json
+++ b/assets/templates/empty/project.json
@@ -1,6 +1,9 @@
 {
   "name": "$name",
   "tree": {
-    "$className": "DataModel"
+    "$className": "DataModel",
+    "Packages": {
+      "$path": "Packages"
+    }
   }
 }
