--- a/assets/templates/package/.gitignore
+++ b/assets/templates/package/.gitignore
@@ -1,8 +1,17 @@
-.DS_Store
-/Packages
+# Argon
 /sourcemap.json
+
+# Wally
+/Packages
+/ServerPackages
+/DevPackages
+
+# Artifacts
 /*.lock
 /*.rbxl
 /*.rbxlx
 /*.rbxm
 /*.rbxmx
+
+# Misc
+.DS_Store
