Downgrade Linux runner to Ubuntu 22 in `release` workflow, fix meta sync

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,8 +61,8 @@ jobs:
         with:
           version: ${{ github.ref_name }}
 
-      - name: Get previus Tag
-        id: previus-tag
+      - name: Get previous Tag
+        id: previous-tag
         uses: WyriHaximus/github-action-get-previous-tag@v1
 
       - name: Create Release
@@ -74,7 +74,7 @@ jobs:
             ## Changelog
             ${{ steps.read-changes.outputs.changes }}
           prerelease: ${{ contains(github.ref_name, 'pre') }}
-          notes_start_tag: ${{ steps.previus-tag.outputs.tag }}
+          notes_start_tag: ${{ steps.previous-tag.outputs.tag }}
           generate_release_notes: true
           commitish: main
           draft: true
@@ -89,7 +89,7 @@ jobs:
         include:
           # x86_64
           - host: linux
-            os: ubuntu-latest
+            os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             label: linux-x86_64
 
