Fix detection of files deleted by commands like `git checkout`

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "cargo"
     directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "quarterly"
       time: "06:00"
     open-pull-requests-limit: 40
     ignore:
